Generate the XML documentation file and make Swagger UI use it
Also, suppress the warning on every single public type/member

--- a/.editorconfig
+++ b/.editorconfig
@@ -225,3 +225,6 @@ dotnet_naming_style._fieldname.required_prefix = _
 dotnet_naming_style._fieldname.required_suffix = 
 dotnet_naming_style._fieldname.word_separator = 
 dotnet_naming_style._fieldname.capitalization = camel_case
+
+# CS1591: Missing XML comment for publicly visible type or member
+dotnet_diagnostic.CS1591.severity = silent
