--- a/src/PokeFun/PokeFun.csproj
+++ b/src/PokeFun/PokeFun.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PokeFun.FunTranslations\PokeFun.FunTranslations.csproj" />
+    <ProjectReference Include="..\PokeFun.PokeApi\PokeFun.PokeApi.csproj" />
+  </ItemGroup>
+
 </Project>
