Make uri and endpoints of external services configurable via options

--- a/src/PokeFun/appsettings.json
+++ b/src/PokeFun/appsettings.json
@@ -6,5 +6,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "PokeApiService": {
+    "BaseAddress": "https://pokeapi.co",
+    "PokemonEndpoint": "api/v2/pokemon",
+    "PokemonSpeciesEndpoint": "api/v2/pokemon-species"
+  },
+  "FunTranslationsService": {
+    "BaseAddress": "https://api.funtranslations.com",
+    "ShakespeareEndpoint": "translate/shakespeare.json",
+    "YodaEndpoint": "translate/yoda.json"
+  }
 }
